src/pages/Products/Products.css
* {
  box-sizing: border-box;
}

.products {
  width: 100vw;
  overflow-y: scroll;
  height: calc(100vh - (2 * var(--header-height)));
}


.products_list {
  background-color: var(--typography-color);
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  justify-content: space-around;
  align-items: center;
  list-style: none;
  font: var(--main-font);
  margin: 0;
  padding-left: var(--main-padding);
}

li.product_item {
  background-color: var(--typography-color);
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-items: center;
  flex-wrap: wrap;
  height: 15rem;
  width: 90%;
  padding: var(--main-padding);
  margin-bottom: var(--main-margin);
  box-shadow: -1px 5px 3px #b1acac;
}

.product_img_wrapper {
  display: inline-flex;
  flex-direction: column;
  flex-wrap: wrap;
  justify-content: space-between;
  align-items: center;
  width: 30%;
  height: 100%;
  overflow-y: scroll;
  background-color: var(--action-color);
}

.product_img {
  padding: 0;
  margin: 0;
  width: 100%;
  height: 80%;
}

.product_img_footer {
  box-sizing: border-box;
  display: flex;
  justify-content: space-around;
  color: white;
  padding: var(--main-padding);
  width: 100%;
  height: 20%;
  font-size: calc(var(--main-font-paragraph-size) * 0.7);
}

